rebase html/css on django

--- a/app_user/templates/logout.html
+++ b/app_user/templates/logout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Выйти из учтной записи</title>
+    <title>Выйти из учётной записи</title>
 </head>
 <body>
     <h2>Выйти из учётной записи</h2>
