--- a/styles/menu.css
+++ b/styles/menu.css
@@ -8,6 +8,15 @@ body{
 	width: 60%;
 }
 
+.pageName{
+	background: #F69400;
+	padding: 10px;
+	border-radius: 45px;
+	text-align: center;
+	margin-top: 30px;
+	color: white;
+}
+
 .menu{
 	position: fixed;
 	bottom: 30px;
