--- a/app_user/templates/register.html
+++ b/app_user/templates/register.html
@@ -7,6 +7,7 @@
 <body>
     <h3>Регистрация</h3>
     <form method="post">
+        {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Зарегистрироваться</button>
     </form>
