--- a/app_user/templates/login.html
+++ b/app_user/templates/login.html
@@ -16,8 +16,10 @@
     <link rel = "stylesheet" type = "text/css" href = "../../styles/login.css"/>
 </head>
 <body>
+
     <section>
         <form method="post">
+            {% csrf_token %}
             <div class="container">
                 <h2>Вход</h2>
                 <div class="form">
