--- a/app_user/static/styles/login.css
+++ b/app_user/static/styles/login.css
@@ -2,6 +2,9 @@ body{
 	padding: 10px;
 	background: #553570;
 	padding: 20px;
+	font-family: 'Montserrat', sans-serif;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 a{
