fix linkes in login.html

--- a/app_user/templates/login.html
+++ b/app_user/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Вход</title>
-    <link href="img/logo_img.png" rel="shortcut icon" type="images/x-icon">
+    <link href="../../img/logo_img.png" rel="shortcut icon" type="images/x-icon">
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
-    <link rel = "stylesheet" type = "text/css" href = "styles/login.css"/>
+    <link rel = "stylesheet" type = "text/css" href = "../../styles/login.css"/>
 </head>
 <body>
 
@@ -40,8 +40,8 @@
                     </div>
                 </div>
 
-                <img src="img/login1.png" alt="" class="login_img1">
-                <img src="img/login2.png" alt="" class="login_img2">
+                <img src="../../img/login1.png" alt="" class="login_img1">
+                <img src="../../img/login2.png" alt="" class="login_img2">
 
                 <div class="container-fluid"></div>
             </div>
