--- a/app_user/templates/login.html
+++ b/app_user/templates/login.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Вход</title>
-    <link href="../img/logo_img.png" rel="shortcut icon" type="images/x-icon">
 
+    {% load static %}
+    <link href="{% static 'img/login_img.png' %}" rel="shortcut icon" type="images/x-icon">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -15,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
-    <link rel = "stylesheet" type = "text/css" href = "../styles/login.css"/>
+    <link rel = "stylesheet" type = "text/css" href="{% static 'styles/login.css' %}"/>
 </head>
 <body>
 
