--- a/app_user/templates/login.html
+++ b/app_user/templates/login.html
@@ -42,8 +42,8 @@
                 </div>
 
                 <link rel = "stylesheet" type = "text/css" href="{% static 'styles/login.css' %}"/>
-                <img src="{% static 'styles/login1.png' %}" alt="" class="login_img1">
-                <img src="{% static 'styles/login2.png' %}" alt="" class="login_img2">
+                <img src="{% static 'img/login1.png' %}" alt="" class="login_img1">
+                <img src="{% static 'img/login2.png' %}" alt="" class="login_img2">
 
                 <div class="container-fluid"></div>
             </div>
