--- a/app_user/templates/login.html
+++ b/app_user/templates/login.html
@@ -21,6 +21,7 @@
 <body>
 
     <section>
+        <h1>Бобразование</h1>
         <form method="post">
             {% csrf_token %}
             <div class="container">
