adaptivity in login.html

--- a/app_user/templates/login.html
+++ b/app_user/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Вход</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% load static %}
     <link href="{% static 'img/login_img.png' %}" rel="shortcut icon" type="images/x-icon">
