--- a/app_user/templates/login.html
+++ b/app_user/templates/login.html
@@ -5,7 +5,7 @@
     <title>Вход</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-g
+    {% load static %}
     <link href="{% static 'img/login_img.png' %}" rel="shortcut icon" type="images/x-icon">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
