--- a/app_user/templates/login.html
+++ b/app_user/templates/login.html
@@ -30,11 +30,11 @@
                 <div class="form">
                     <div class="mb-3 name">
                         <label class="form-label">Имя:</label>
-                        <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username" class="form-control" placeholder="Введите имя" required>
+                        <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username" class="form-control login" placeholder="Введите имя" required>
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Пароль:</label>
-                        <input type="password" name="password" autocomplete="current-password" required="" id="id_password" class="form-control" placeholder="Введите пароль">
+                        <input type="password" name="password" autocomplete="current-password" required="" id="id_password" class="form-control password" placeholder="Введите пароль">
                     </div>
                     <div class="button">
                         <button type="submit" class="btn btn-dark login" id="btn">Войти</button>
