--- a/app_user/templates/register.html
+++ b/app_user/templates/register.html
@@ -3,13 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
+
+    {% load static %}
+    <link href="{% static 'img/login_img.png' %}" rel="shortcut icon" type="images/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Bootstrap-->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link rel = "stylesheet" type = "text/css" href = "{% static 'styles/registration.css' %}"/>
 </head>
 <body>
-    <h3>Регистрация</h3>
+    <h1>Бобразование</h1>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Зарегистрироваться</button>
+        <div class="container">
+            <h2>Регистрация</h2>
+            <div class="form">
+                <div class="mb-3 name">
+                    <label class="form-label">Логин:</label>
+                    <input type="text" class="form-control" id="id_username" name="username" placeholder="Введите логин" required>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Номер телефона:</label>
+                    <input type="text" class="form-control" name="phone_number" id="id_phone_number" placeholder="+7 xxx xxx xx xx" required>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Почта</label>
+                    <input type="text" name="email" class="form-control" id="id_email" placeholder="ivan@mail.ru" required>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Пароль:</label>
+                    <input type="password" class="form-control" id="id_password1" name="password1" placeholder="Введите пароль" required>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Подтвердите пароль:</label>
+                    <input type="password" class="form-control" id="id_password2" name="password2" placeholder="Введите пароль" required>
+                </div>
+                <!--<div class="mb-3">
+                    <label class="form-label">Загрузите ваше фото</label>
+                    <input type="file" class="upload" id="photo-upload"/>
+                  </div> -->
+                <div class="button">
+                    <button type="submit" class="btn btn-dark" id="btn">Зарегистрироваться</button>
+                    <br/>
+                    <a href="/login" class="form-label reg">Войти</a>
+                </div>
+            </div>
+            <img src="{% static 'img/registraiton.png' %}" alt="" class="reg_img">
+
+            <div class="container-fluid"></div>
+        </div>
+
+        <script src="https://code.jquery.com/jquery-latest.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script type="text/javascript" src="{% static 'scripts/register.js' %}"></script>
     </form>
 </body>
 </html>
