переделал форму регистрации, дописал доки

--- a/app_user/templates/edit_profile.html
+++ b/app_user/templates/edit_profile.html
@@ -9,7 +9,7 @@
         {% csrf_token %}
         {{ profile_form.as_p }}
         <button type="submit">Сохранить</button>
-        <a href="../{{ profile_id }}">Назад</a>
+        <a href="../{{ user_id }}">Назад</a>
     </form>
 </body>
 </html>
