--- a/app_user/templates/register.html
+++ b/app_user/templates/register.html
@@ -35,7 +35,7 @@
                     <input type="text" class="form-control" name="phone_number" id="id_phone_number" placeholder="+7 xxx xxx xx xx" required>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label">Почта</label>
+                    <label class="form-lagbel">Почта</label>
                     <input type="text" name="email" class="form-control" id="id_email" placeholder="ivan@mail.ru" required>
                 </div>
                 <div class="mb-3">
