--- a/app_user/templates/register.html
+++ b/app_user/templates/register.html
@@ -44,8 +44,9 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Подтвердите пароль:</label>
-                    <input type="password" class="form-control" id="id_password2" name="password2" placeholder="Введите пароль" required>
+                    <input tgype="password" class="form-control" id="id_password2" name="password2" placeholder="Введите пароль" required>
                 </div>
+                <p>Город: {{ form.city }}</p>
                 <!--<div class="mb-3">
                     <label class="form-label">Загрузите ваше фото</label>
                     <input type="file" class="upload" id="photo-upload"/>
