--- a/app_user/templates/register.html
+++ b/app_user/templates/register.html
@@ -27,25 +27,23 @@
             <h2>Регистрация</h2>
             <div class="form">
                 <div class="mb-3 name">
-                    <input type="text" class="form-control" id="id_username" name="username" placeholder="Введите логин" required>
-                </div>
-                <div class="mb-3">
-                    <input type="text" class="form-control" name="phone_number" id="id_phone_number" placeholder="+7 xxx xxx xx xx" required>
-                </div>
-                <div class="mb-3">
-                    <input type="text" name="email" class="form-control" id="id_email" placeholder="ivan@mail.ru" required>
-                </div>
-                <div class="mb-3">
-                    <input type="password" class="form-control" id="id_password1" name="password1" placeholder="Введите пароль" required>
-                </div>
-                <div class="mb-3">
-                    <input tgype="password" class="form-control" id="id_password2" name="password2" placeholder="Введите пароль" required>
-                </div>
-                <p>Город: {{ form.city }}</p>
-                <!--<div class="mb-3">
-                    <label class="form-label">Загрузите ваше фото</label>
-                    <input type="file" class="upload" id="photo-upload"/>
-                  </div> -->
+			    	<input type="text" class="form-control" id="login" placeholder="Введите логин" required>
+			  	</div>
+			  	<div class="mb-3">
+			    	<input type="text" class="form-control" id="phone" placeholder="+7 xxx xxx xx xx" required>
+			  	</div>
+			  	<div class="mb-3">
+			    	<input type="text" class="form-control" id="mail" placeholder="ivan@mail.ru" required>
+			  	</div>
+			  	<div class="mb-3">
+			    	<input type="text" class="form-control" id="city" placeholder="Ваш город" required>
+			  	</div>
+			  	<div class="mb-3">
+			    	<input type="password" class="form-control" id="password" placeholder="Введите пароль" required>
+			  	</div>
+			  	<div class="mb-3">
+			    	<input type="password" class="form-control" id="repassword" placeholder="Повторите пароль" required>
+			  	</div>
                 <div class="button">
                     <button type="submit" class="btn btn-dark" id="btn">Зарегистрироваться</button>
                     <br/>
