--- a/app_user/templates/login.html
+++ b/app_user/templates/login.html
@@ -32,6 +32,9 @@
                         <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username" class="form-control login" placeholder="Введите имя" required>
                     </div>
                     <div class="mb-3">
+			    	    <input type="text" class="form-control" id="city" placeholder="Ваш город" required>
+			  	    </div>
+                    <div class="mb-3">
                         <input type="password" name="password" autocomplete="current-password" required="" id="id_password" class="form-control password" placeholder="Введите пароль">
                     </div>
                     <div class="button">
