--- a/app_user/templates/profile_detail.html
+++ b/app_user/templates/profile_detail.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset = "UTF-8">
+    <title>Бобразование</title>
+
+    {% load static %}
+    <link href="img/logo_img.png" rel="shortcut icon" type="images/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Bootstrap-->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+
+    <link rel = "stylesheet" type = "text/css" href = "styles/profile.css"/>
+    <link rel = "stylesheet" type = "text/css" href = "styles/menu.css"/>
     <title>{{ profile.first_name }} {{ profile.last_name }}</title>
 </head>
 <body>
