--- a/app_user/templates/login.html
+++ b/app_user/templates/login.html
@@ -28,9 +28,9 @@
             <div class="container">
                 <h2>Вход</h2>
                 <div class="form">
-			<div class="mb-3">
-			<input type="text" class="form-control" id="city" placeholder="Ваш город" required>
-			</div>
+			<div class="mb-3 name">
+			    <input type="text" class="form-control" id="city" placeholder="Ваш город" required>
+			  </div>
                     <div class="mb-3 name">
                         <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username" class="form-control login" placeholder="Введите имя" required>
                     </div>
