some changes in urls

--- a/app_user/templates/profile_detail.html
+++ b/app_user/templates/profile_detail.html
@@ -71,7 +71,7 @@
                 </a>
                 <br/>
                 <a href={{ profile.email }}>
-                    <ion-icon name="at-outliпne" class="icons">
+                    <ion-icon name="at-outline" class="icons">
 
                     </ion-icon> {{ profile.email }}
                 </a>
@@ -81,13 +81,13 @@
             </div>
         </div>
 
-g    </div>
+    </div>
 
     <div class="container menu">
 
         <div class="col-4 menu_elem">
-            <a href="../profiles" class="menu_element active">Профиль</a>
-            <a href="../profiles" class="menu_element_img active"><ion-icon name="person-circle-outline"></ion-icon></a>
+            <a href="#" class="menu_element active">Профиль</a>
+            <a href="#" class="menu_element_img active"><ion-icon name="person-circle-outline"></ion-icon></a>
         </div>
 
         <div class="col-4 menu_elem">
