--- a/app_user/templates/login.html
+++ b/app_user/templates/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% load static %}
-    <link href="{% static 'img/login_img.png' %}" rel="shortcut icon" type="images/x-icon">
+    <link href="{% static 'img/logo_img.png' %}" rel="shortcut icon" type="images/x-icon">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
