--- a/app_user/templates/register.html
+++ b/app_user/templates/register.html
@@ -5,7 +5,7 @@
     <title>Регистрация</title>
 
     {% load static %}
-    <link href="{% static 'img/login_img.png' %}" rel="shortcut icon" type="images/x-icon">
+    <link href="{% static 'img/logo_img.png' %}" rel="shortcut icon" type="images/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--Bootstrap-->
