--- a/app_user/templates/register.html
+++ b/app_user/templates/register.html
@@ -27,22 +27,22 @@
             <h2>Регистрация</h2>
             <div class="form">
                 <div class="mb-3 name">
-			    	<input type="text" class="form-control" id="id_username" placeholder="Введите логин" required>
+			    	<input type="text" name="username" maxlength="150" autofocus="" class="form-control" id="id_username" placeholder="Введите логин" required>
 			  	</div>
 			  	<div class="mb-3">
-			    	<input type="text" class="form-control" id="id_phone_number" placeholder="+7 xxx xxx xx xx" required>
+			    	<input type="text" name="phone_number" maxlength="11" class="form-control" id="id_phone_number" placeholder="+7 xxx xxx xx xx" required>
 			  	</div>
 			  	<div class="mb-3">
-			    	<input type="text" class="form-control" id="id_email" placeholder="ivan@mail.ru" required>
+			    	<input type="email" name="email" class="form-control" id="id_email" placeholder="ivan@mail.ru" required>
 			  	</div>
 			  	<div class="mb-3">
-			    	<input type="text" class="form-control" id="city" placeholder="Ваш город" required>
+			    	<input type="text" name="city" maxlength="50" class="form-control" id="city" placeholder="Ваш город" required>
 			  	</div>
 			  	<div class="mb-3">
-			    	<input type="password" class="form-control" id="id_password1" placeholder="Введите пароль" required>
+			    	<input type="password" name="password1" autocomplete="new-password" class="form-control" id="id_password1" placeholder="Введите пароль" required>
 			  	</div>
 			  	<div class="mb-3">
-			    	<input type="password" class="form-control" id="id_password2" placeholder="Повторите пароль" required>
+			    	<input type="password" name="password2" autocomplete="new-password" class="form-control" id="id_password2" placeholder="Повторите пароль" required>
 			  	</div>
                 <div class="button">
                     <button type="submit" class="btn btn-dark" id="btn">Зарегистрироваться</button>
