--- a/app_user/templates/profile_detail.html
+++ b/app_user/templates/profile_detail.html
@@ -61,7 +61,7 @@
         <div class="row data_container">
             <div class="col-lg-6 col-md-12" id="first_block">
                 <img src="{% static 'img/photo.png' %}" class="photo">
-                <a href=""><button type="button" class="btn btn-secondary" id="edit">Редактировать</button></a>
+                <a href="/profile/{{ profile.id }}/edit"><button type="button" class="btn btn-secondary" id="edit">Редактировать</button></a>
             </div>
             <div class="col-lg-6 col-sm-12 data" id="second_block">
                 <p>{{ profile.first_name }} {{ profile.last_name }}</p>
