Пофиксил баги с формами

--- a/app_user/templates/profile_detail.html
+++ b/app_user/templates/profile_detail.html
@@ -65,9 +65,9 @@
             </div>
             <div class="col-lg-6 col-sm-12 data" id="second_block">
                 <p>{{ profile.first_name }} {{ profile.last_name }}</p>
-                <a href="+79996052278">
+                <a href="">
                     <ion-icon name="call-outline" class="icons"></ion-icon>
-                    +79996052278
+                    {{ profile.phone_number }}
                 </a>
                 <br/>
                 <a href={{ profile.email }}>
