--- a/app_user/templates/edit_profile.html
+++ b/app_user/templates/edit_profile.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Радактирование профиля</title>
+    <meta charset = "UTF-8">
+    <title>Бобразование</title>
+    {% load static %}
+
+    <link href="{% static 'img/login_img.png' %}" rel="shortcut icon" type="images/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Bootstrap-->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link rel = "stylesheet" type = "text/css" href = "{% static 'styles/edit.css' %}"/>
+    <link rel = "stylesheet" type = "text/css" href = "{% static 'styles/menu.css' %}"/>
 </head>
 <body>
     <form method="post">
