--- a/app_user/templates/register.html
+++ b/app_user/templates/register.html
@@ -30,7 +30,7 @@
 			    	<input type="text" name="username" maxlength="150" autofocus="" class="form-control" id="id_username" placeholder="Введите логин" required>
 			  	</div>
 			  	<div class="mb-3">
-			    	<input type="text" name="phone_number" maxlength="11" class="form-control" id="id_phone_number" placeholder="+7 xxx xxx xx xx" required>
+			    	<input type="text" name="phone_number" maxlength="11" class="form-control" id="id_phone_number" placeholder="8 xxx xxx xx xx" required>
 			  	</div>
 			  	<div class="mb-3">
 			    	<input type="email" name="email" class="form-control" id="id_email" placeholder="ivan@mail.ru" required>
