changes in edit_profile

--- a/app_user/templates/edit_profile.html
+++ b/app_user/templates/edit_profile.html
@@ -40,19 +40,19 @@
 
                 <div class="col-lg-6 col-sm-12 data" id="second_block">
                     <div class="mb-3 name">
-                        <input type="text" class="form-control login" placeholder="Фамилия" required>
+                        <input type="text" class="form-control login" id="id_last_name" placeholder="Фамилия" required>
                     </div>
                     <div class="mb-3 name">
-                        <input type="text" class="form-control login" placeholder="Имя" required>
+                        <input type="text" class="form-control login" id="id_first_name" placeholder="Имя" required>
                     </div>
                     <div class="mb-3 name">
-                        <input type="text" class="form-control login" placeholder="Отчество" required>
+                        <input type="text" class="form-control login" id="id_patronymic" placeholder="Отчество" required>
                     </div>
                     <div class="mb-3 name">
-                        <input type="text" class="form-control login" placeholder="+79184898848" required>
+                        <input type="text" class="form-control login" id="id_phone_number" placeholder="+79184898848" required>
                     </div>
                     <div class="mb-3 name">
-                        <input type="text" class="form-control login" placeholder="example@mail.ru" required>
+                        <input type="text" class="form-control login" placeholder="example@mail.ru" id="id_email" required>
                     </div>
                 </div>
             </div>
